<resources>
    <string name="app_name">漂书</string>
    <string name="search">求漂</string>
    <string name="set">放漂</string>
    <string name="my">我漂</string>
    <string name="message">消息</string>
    <string name="profile">个人</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="mail">邮箱</string>
    <string name="person_login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="confirm">注册成功需要前往邮箱验证，否则无法登陆</string>
    <string name="forgethint">请前往邮箱找回密码</string>
    <string name="text_now_login">正在登陆...</string>
    <string name="dp">头像</string>
    <string name="nick">呢称</string>
    <string name="city">城市</string>
    <string name="exit">退出登录</string>
    <string name="sex">性别</string>
    <string name="edit">编辑资料</string>
    <string name="update">确认修改</string>
    <string name="camera">照相</string>
    <string name="picture">相册</string>
    <string name="cancle">取消</string>
    <string name="lookup">搜索书籍</string>
    <string name="search_hint">搜索书名或isbn号</string>
    <string name="no_more">没有更多了</string>
    <string name="share_dialog_title">分享</string>
    <string name="poor_network">网络连接失败，请检查网络</string>

    <string name="action_share">分享</string>
    <string name="comment">评论</string>
    <string name="isbn">ISBN: </string>
    <string name="pages">页数: </string>
    <string name="comment_num">人点评</string>
    <string name="no_brief">暂无简介</string>
    <string name="more_brief">更多评论</string>
    <string name="no_pages">暂无信息</string>


    <!-- ************确认取消对话框************ -->
    <string name="confirm_cancel_title">提示</string>
    <string name="confirm_cancel_right_btn">取消</string>
    <string name="confirm_cancel_left_btn">我要漂流</string>
    <string name="confirm_between_btn">我要收藏</string>
    <string name="exit_directly">直接退出</string>
    <string name="press_twice_exit">再次按返回键退出</string>
    <string name="myset">我的放漂</string>
    <string name="mysearch">我的求漂</string>
    <string name="my_wish">我的收藏</string>
    <string name="cross_trail">查看漂流轨迹</string>



    <string name="action_settings">Settings</string>
    <string name="longclick_speak">长按说话</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="chat">私聊</string>


    <array name="my_cross_tab">
        <item>我的放漂@dream@0</item>
        <item>我的求漂@dream@1</item>
    </array>
</resources>
