<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:padding="10dp">


    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/camera"
        android:textColor="@android:color/white"
        android:textSize="16dp" />
    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/picture"
        android:textColor="@android:color/white"
        android:textSize="16dp" />
    <Button
        android:id="@+id/btn_cancle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/cancle"
        android:textColor="@android:color/white"
        android:textSize="16dp" />

</LinearLayout>