<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <!--头部内容-->
    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#2BACE0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="30sp" />
    </RelativeLayout>

    <!--注册信息-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/img_reg_account"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_account" />

        <EditText
            android:id="@+id/et_reg_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_reg_account"
            android:background="@null"
            android:hint="@string/username"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_reg_account"
            android:background="@color/orange_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_reg_mail"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_register_mail" />

        <EditText
            android:id="@+id/et_reg_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_reg_mail"
            android:background="@null"
            android:hint="@string/mail"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_reg_mail"
            android:background="@color/orange_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_reg_pw"
            android:layout_width="21dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_pw" />

        <EditText
            android:id="@+id/et_reg_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_reg_pw"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/img_reg_pw"
            android:background="@color/orange_light" />
    </RelativeLayout>


    <!--提示信息-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:textSize="11dp"
        android:text="@string/confirm"/>
    <!--注册按钮-->
    <Button
        android:id="@+id/btn_reg_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="16dp" />


</LinearLayout>